--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
 		function init() {
 			canvas = document.getElementById("canvas");
 			context = canvas.getContext('2d');
+			window.addEventListener("keydown", function(e) {
+				if (!e) { var e = window.event; }
+				if (e.keyCode == 13) { 
+					e.preventDefault();
+					check(); 
+				}
+			}, false);
+
+
 		}
 
 		function draw_row() {
@@ -71,6 +80,7 @@
 				canvas.width = Math.round(inputWidth);
 				canvas.height = Math.round(inputHeight);
 				start();
+				document.getElementById("ruleField").focus(); 
 			}
 		}
 	</script>
